fix: CSS dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
+body {
+  background-color: rgba(50, 50, 50);
+  color: rgba(200, 200, 200);
+}
+
 .App {
+
   text-align: center;
 }
 
@@ -7,7 +13,7 @@
   pointer-events: none;
 }
 
-@media ( prefers-reduced-motion : no-preference ) {
+@media (prefers-reduced-motion : no-preference) {
 
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
